--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "random-string",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "generate random string from custom charset (or the default one) and define the length of the string.  Fantastic for when you need to generate a 'throw-away' id",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "copy and paste the examples from readMe"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
     "id",
     "string"
   ],
-  "author": "Brian Bagdasarian",
+  "author": "Brian Bagdasarian, Conceptuli",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/conceptuli/random-string/issues"
   },
-  "homepage": "https://github.com/conceptuli/random-string"
+  "homepage": "https://github.com/conceptuli/random-string",
+  "devDependencies": {
+    "coffee-script": "^1.8.0"
+  }
 }
